--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
-body{
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+:root {
+    --color-1: #512DA8;
+    --color-2: #4CAF50;
+    --color-3: #212121;
+}
+
+body {
     width: 500px;
     height: 300px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
 }
-label{
+
+p {
+    margin: 0;
+}
+
+label {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -12,3 +28,112 @@ label{
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
+#form {
+    display: flex;
+    height: 40px;
+    position: relative;
+}
+
+input[type="text"] {
+    width: 100%;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    padding: 0 0.5rem 0 2.5rem;
+    font-size: 1.25rem;
+    border-bottom: 2px solid var(--color-1);
+}
+
+button[type="submit"] {
+    cursor: pointer;
+    width: 50px;
+    border: 0;
+    outline: 0;
+    background-color: var(--color-1);
+}
+
+button[type="submit"] span {
+    font-size: 2rem;
+    color: #fff;
+}
+
+.example {
+    font-size: 1.25rem;
+}
+
+.tooltip {
+    display: inline;
+    position: absolute;
+    top: 50%;
+    left: 0.5rem;
+    transform: translateY(-50%);
+    background: var(--color-3);
+    border-radius: 50px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    line-height: 1.3rem;
+}
+
+.instructions {
+    display: none;
+    position: fixed;
+    left: 2rem;
+    top: 1rem;
+    background: var(--color-3);
+    border-radius: 5px;
+    color: #fff;
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
+    width: max-content;
+    line-height: 1.5rem;
+}
+.instructions .astrix{
+    display: inline-block;
+    width: 1rem;
+    position: relative;
+
+}
+.instructions .astrix span {
+    position: absolute;
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--color-2);
+    line-height: 0;
+}
+#data{
+    height: 100%;
+    overflow-y: scroll;
+    padding: 1rem;
+}
+.wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom:1rem;
+}
+.label{
+    background-color: var(--color-2);
+    color:#fff;
+    padding: 0.25rem 0.5rem;
+    border-radius: 5px;
+}
+
+.goto{
+    text-decoration: none;
+    font-size:1rem;
+    color: var(--color-3)
+}
+.remove{
+    cursor: pointer;
+    background-color: #FF5252;
+    border:0;
+    outline: 0;
+    border-radius: 5px;
+    padding:0.25rem;
+}
+
