--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 :root {
     --color-1: #512DA8;
-    --color-2: #4CAF50;
+    --color-2: #00796B;
     --color-3: #212121;
 }
 
