--- a/src/style.css
+++ b/src/style.css
@@ -116,11 +116,15 @@ label {
 }
 
 .wrapper {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
+    padding: 0.5rem;
+}
+.wrapper.selected{
+    background-color: #eee;
 }
 
 .wrapper div {
